Added features content

--- a/app/views/landingpage/home.html.erb
+++ b/app/views/landingpage/home.html.erb
@@ -1,4 +1,4 @@
-<link href='https://fonts.googleapis.com/css?family=Varela' rel='stylesheet' type='text/css'>
+
 <div class="jumbotron hacked text-center">
     <nav class="navbar navbar-fixed-top navbar-inverse navbar-hacked">
       <div class="row">
@@ -42,6 +42,20 @@
           <img src="https://s3.amazonaws.com/uifaces/faces/twitter/csswizardry/128.jpg" class="img-circle img-objective"/>
         </div>
           <div class="col-md-8">
+            <h2>Words from the Captain <small>Arun Wosaree</small></h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, sit, repellendus unde alias hic pariatur fugit ab perspiciatis. Commodi, nulla, vero ipsum suscipit eligendi omnis atque beatae magnam vel deserunt!</p>
+            <%= link_to "Sign up for news and upcoming events!", "#", class:"btn btn-success btn-hacked success" %>
+          </div>
+      </div>
+    </div>
+
+    <div class="well objective-well">
+      <div class="row">
+        <div class="col-md-2 col-md-offset-1 text-center">
+
+          <img src="https://s3.amazonaws.com/uifaces/faces/twitter/csswizardry/128.jpg" class="img-circle img-objective"/>
+        </div>
+          <div class="col-md-8">
             <h2>Our Objectives <small>Arun Wosaree</small></h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, sit, repellendus unde alias hic pariatur fugit ab perspiciatis. Commodi, nulla, vero ipsum suscipit eligendi omnis atque beatae magnam vel deserunt!</p>
             <%= link_to "Sign up for news and upcoming events!", "#", class:"btn btn-success btn-hacked success" %>
@@ -49,6 +63,35 @@
       </div>
     </div>
     
-    
   </div>
+</div>
+
+<div class="well objective-well feature-well text-center">
+  <div class="row">
+    <h2>Club Features</h2>
+    <br/>
+      <div class="col-md-4">
+        <i class="fa fa-desktop fa-5x"></i>
+        <br/>
+        <h4>Learn about your Computer</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis expedita temporibus. In, quasi, praesentium eos ipsum reprehenderit sequi excepturi consectetur id quia omnis modi qui cumque quidem hic ullam.</p>
+      </div>
+      
+      <div class="col-md-4">
+        <i class="fa fa-code fa-5x"></i>
+        <br/>
+        <h4>Learn to Code</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis expedita temporibus. In, quasi, praesentium eos ipsum reprehenderit sequi excepturi consectetur id quia omnis modi qui cumque quidem hic ullam.</p>
+      </div>
+      
+      <div class="col-md-4">
+        <i class="fa fa-mobile fa-5x"></i>
+        <br/>
+        <h4>Hack your Phone</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis expedita temporibus. In, quasi, praesentium eos ipsum reprehenderit sequi excepturi consectetur id quia omnis modi qui cumque quidem hic ullam.</p>
+      </div>
+  </div>
+  
+  <br/>
+  <%= link_to "Sign up for Club Contents", "#", class:"btn btn-primary" %>
 </div>
