--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,10 +10,6 @@ body {
     color: $pirate_black;
 }
 
-.jumbotron {
-    padding-top: 120px;
-}
-
 .btn-hacked {
   border-radius:0;
 }
@@ -22,6 +18,7 @@ body {
   }
 
 .hacked {
+    padding: 256px 0;
     background-color:black;
     color:#777;
     margin-bottom:0;
@@ -100,17 +97,18 @@ body {
   -webkit-box-shadow: inset 0px 25px 20px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: inset 0px 25px 20px 0px rgba(0,0,0,0.75);
   box-shadow: inset 0px 25px 20px 0px rgba(0,0,0,0.75);
-  
+  margin-bottom: 0;
+  padding-bottom: 120px;
 }
 
 .objective-well {
   border:none;
   border-right: 2px solid $rose-red;
   border-radius:0;
-  background-color:black;
+  background-color:rgba(0,0,0,0.5);
   
   color: $terminal-green;
-  
+  font-family: 'Montserrat';
   p {
     font-size: 14px;
     color: #2DEA8F;
@@ -119,4 +117,14 @@ body {
 
 .img-objective {
   margin-top:15px;
+}
+
+.feature-well {
+  border:none;
+  border-top: 2px solid $terminal-green;
+  color:white;
+  
+  p {
+    color:white;
+  }
 }
