--- a/app/views/landingpage/home.html.erb
+++ b/app/views/landingpage/home.html.erb
@@ -1,24 +1,19 @@
 
 <div class="jumbotron hacked text-center">
-    <nav class="navbar navbar-fixed-top navbar-inverse navbar-hacked">
+    
+    <nav class="navbar navbar-inverse navbar-hacked">
       <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <%= link_to 'The Pirate Club', root_path, class: 'navbar-brand' %>
-            </div>
-            <div class="collapse navbar-collapse" id="main-nav-collapse">
-              <ul class="nav navbar-nav navbar-right">
-                <li><%= link_to "Home", "#" %></li>
-                <li><%= link_to "About", "#" %></li>
-                <li><%= link_to "Contact", "#" %></li>
-              </ul>  
-            </div>
+        <div class="col-md-2 col-md-offset-3">
+          <div class="navbar-header">
+            <%= link_to 'The Pirate Club', root_path, class: 'navbar-brand' %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <ul class="nav navbar-nav navbar-right text-center">
+            <li><%= link_to "Events", "#" %></li>
+            <li><%= link_to "Members", "#" %></li>
+            <li><%= link_to "Contact", "#" %></li>
+          </ul> 
         </div>
       </div>
     </nav>
@@ -42,7 +37,7 @@
           <img src="https://s3.amazonaws.com/uifaces/faces/twitter/csswizardry/128.jpg" class="img-circle img-objective"/>
         </div>
           <div class="col-md-8">
-            <h2>Words from the Captain <small>Arun Wosaree</small></h2>
+            <h2>Words from the Captain <small></small></h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, sit, repellendus unde alias hic pariatur fugit ab perspiciatis. Commodi, nulla, vero ipsum suscipit eligendi omnis atque beatae magnam vel deserunt!</p>
             <%= link_to "Sign up for news and upcoming events!", "#", class:"btn btn-success btn-hacked success" %>
           </div>
