--- a/app/views/landingpage/home.html.erb
+++ b/app/views/landingpage/home.html.erb
@@ -51,7 +51,7 @@
           <img src="https://s3.amazonaws.com/uifaces/faces/twitter/csswizardry/128.jpg" class="img-circle img-objective"/>
         </div>
           <div class="col-md-8">
-            <h2>Our Objectives <small>Arun Wosaree</small></h2>
+            <h2>Our Objectives <small></small></h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, sit, repellendus unde alias hic pariatur fugit ab perspiciatis. Commodi, nulla, vero ipsum suscipit eligendi omnis atque beatae magnam vel deserunt!</p>
             <%= link_to "Sign up for news and upcoming events!", "#", class:"btn btn-success btn-hacked success" %>
           </div>
