--- a/app/views/landingpage/home.html.erb
+++ b/app/views/landingpage/home.html.erb
@@ -1,6 +1,3 @@
-
-<div class="jumbotron hacked text-center">
-    
     <nav class="navbar navbar-inverse navbar-hacked">
       <div class="container">
         <div class="row">
@@ -19,6 +16,7 @@
         </div>        
       </div>
     </nav>
+<div class="jumbotron hacked text-center" id="navtron">
     
     <div class="glitch" data-text="THE&nbsp;PIRATE&nbsp;CLUB">THE PIRATE CLUB</div>
     <h3>//Welcome to the official site for the RSHS Pirate Club.</h3>
@@ -40,8 +38,8 @@
         </div>
           <div class="col-md-8">
             <h2>Words from the Captain <small></small></h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, sit, repellendus unde alias hic pariatur fugit ab perspiciatis. Commodi, nulla, vero ipsum suscipit eligendi omnis atque beatae magnam vel deserunt!</p>
-            <%= link_to "Sign up for news and upcoming events!", "#", class:"btn btn-success btn-hacked success" %>
+            <p>Arrrrrrrrrrrrhg! Welcome! Just know that you might be thinking of a different kind of pirate than us... No, we do not rule the 7 seas. Rather, we love the internet and what it has to offer. However, we are not condoning piracy...</p>
+            <%= link_to "Sign up for news and upcoming events!", "#", class:"btn btn-primary btn-hacked" %>
           </div>
       </div>
     </div>
@@ -53,9 +51,9 @@
           <img src="https://s3.amazonaws.com/uifaces/faces/twitter/flamekaizar/128.jpg" class="img-circle img-objective"/>
         </div>
           <div class="col-md-8">
-            <h2>Our Objectives <small></small></h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, sit, repellendus unde alias hic pariatur fugit ab perspiciatis. Commodi, nulla, vero ipsum suscipit eligendi omnis atque beatae magnam vel deserunt!</p>
-            <%= link_to "Sign up for news and upcoming events!", "#", class:"btn btn-success btn-hacked success" %>
+            <h2>Goals for this Year</h2> <small></small></h2>
+            <p>We plan to lease a server for one... And we're always listening for new ideas! (Related to tech)</p>
+            <%= link_to "View More >", "#", class:"btn btn-primary btn-hacked" %>
           </div>
       </div>
     </div>
@@ -71,7 +69,7 @@
         <i class="fa fa-desktop fa-5x"></i>
         <br/>
         <h4>Learn about your Computer</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis expedita temporibus. In, quasi, praesentium eos ipsum reprehenderit sequi excepturi consectetur id quia omnis modi qui cumque quidem hic ullam.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, deserunt, odio, quasi, ad quo autem praesentium quaerat facere voluptatem fugiat voluptatum sed itaque ex! Quia minima voluptas corporis vero blanditiis.</p>
       </div>
       
       <div class="col-md-4">
