--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,90 +1,45 @@
-@import "bootstrap-sprockets";
-@import "bootstrap";
 
-$pirate_black: #222831;
+$blue-black: #393E46;
+$pirate-black: #222831;
 $terminal-green: #24B273;
 $rose-red: #A51C2D;
 
-body {
-    background-color:#393E46;
-    color: $pirate_black;
+//GENERAL
+
+body.pirate {
+  background-color: $blue-black;
+  color: $pirate-black;
 }
 
-.btn-hacked {
+.navbar.navbar-hacked {
+  margin-bottom:0;
+  padding-top:32px;
+  
+  border:none;
+  background-color: rgba(0,0,0,1);
+  
+  -webkit-box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 10px 15px 0px rgba(0,0,0,0.75);
+}
+
+.navbar.navbar-fixed-top {
+  padding-top:0;
+}
+
+//landing page
+.btn.btn-hacked {
   border-radius:0;
 }
 
-.hacked {
+.jumbotron.hacked {
     padding: 128px 0 256px 0;
     background-color:black;
     color:#777;
     margin:0;
 }
 
-.navbar-hacked {
-  margin-bottom:0;
-  padding-top:32px;
-  
-  border:none;
-  background-color: rgba(0,0,0,1);
-}
-
-.navbar-fixed-top {
-  padding-top:0;
-}
-
-.glitch{
-  color:white;
-  font-size:72px;
-  position:relative;
-  width:400px;
-  //margin:0 auto;
-  display:inline;
-  font-family: 'Varela';
-}
-@keyframes noise-anim{
-  $steps:20;
-  @for $i from 0 through $steps{
-    #{percentage($i*(1/$steps))}{
-      clip:rect(random(100)+px,9999px,random(100)+px,0);
-    }
-  }
-}
-.glitch:after{
-  content:attr(data-text);
-  position:absolute;
-  left:2px;
-  text-shadow:-1px 0 red;
-  top:0;
-  color:white;
-  background:black;
-  overflow:hidden;
-  clip:rect(0,900px,0,0); 
-  animation:noise-anim 5s infinite linear alternate-reverse;
-}
-
-@keyframes noise-anim-2{
-  $steps:20;
-  @for $i from 0 through $steps{
-    #{percentage($i*(1/$steps))}{
-      clip:rect(random(100)+px,9999px,random(100)+px,0);
-    }
-  }
-}
-.glitch:before{
-  content:attr(data-text);
-  position:absolute;
-  left:-2px;
-  text-shadow:1px 0 blue; 
-  top:0;
-  color:white;
-  background:black;
-  overflow:hidden;
-  clip:rect(0,900px,0,0); 
-  animation:noise-anim-2 6s infinite linear alternate-reverse;
-}
-
-.btn-jumbohack {
+.btn.btn-jumbohack {
     font-size: 120%;
     margin: 5px 5px;
     border-radius: 0;
@@ -93,8 +48,8 @@ body {
 
 
 // Jumbotron 2
-.hacked-2 {
-  background-image: url("http://i.imgur.com/t3lDqKd.jpg");
+.jumbotron.hacked-2 {
+  background-image: url("https://i.imgur.com/t3lDqKd.jpg");
   
   -webkit-box-shadow: inset 0px 25px 20px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: inset 0px 25px 20px 0px rgba(0,0,0,0.75);
@@ -103,7 +58,7 @@ body {
   padding-bottom: 120px;
 }
 
-.objective-well {
+.well.objective-well {
   border:none;
   border-right: 2px solid $rose-red;
   border-radius:0;
@@ -121,7 +76,7 @@ body {
   margin-top:15px;
 }
 
-.feature-well {
+.well.feature-well {
   border:none;
   border-top: 2px solid $terminal-green;
   margin-bottom: 0;
@@ -138,14 +93,13 @@ body {
 
 //footer
 
-.footer-container {
+.container.footer-container {
   color:#F7F4EA;
   padding: 128px 0 ;
 }
 
-.footer {
+ul.footer-list {
   padding-left: 0;
-  padding-top: 16px;
   list-style: none;
   
   li {
@@ -154,12 +108,56 @@ body {
   }
 }
 
-.footer-well {
+.well.footer-well {
   border-bottom: 3px solid $pirate-black;
   border-left: 2px solid $rose-red;
 }
 
-.end-well {
+.well.end-well {
   border: none;
   margin-bottom: 0;
+  
+  position:fixed;
+  left:0;
+  bottom:0;
+  height:48px;
+  width:100%;
+}
+
+
+
+
+//USERS CSS
+.well.pirate-well {
+  border:0;
+  border-radius: 0;
+  background-color: rgba(0,0,0,0.5);
+  color: $terminal-green;
+  
+  padding: 0 0 0 0;
+  margin-bottom: 0;
+}
+
+.well.benefit-well {
+  border:0;
+  border-radius:0;
+  border-left: 3px solid $rose-red;
+  
+  padding-bottom: 40px;
+  margin-bottom:0;
+  background-color: rgba(0,0,0,0.3);
+}
+
+.line-left {
+  border-left: 3px solid $rose-red;
+}
+
+ul.benefit-members {
+  list-style:none;
+  padding-left: 30px;
+  
+  li > a {
+    margin: 8px 0;
+    color: inherit;
+  }
 }
