--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,42 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="pirate">
+    <nav class="navbar navbar-inverse navbar-hacked">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 col-md-offset-2">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+              <%= link_to 'The Pirate Club', root_path, class: 'navbar-brand' %>
+            </div>
+          </div>
+          <div class="col-md-5">
+            <div class="collapse navbar-collapse" id="main-nav-collapse">
+                <ul class="nav navbar-nav navbar-right text-center">
+                  <li><%= link_to "Events", "#" %></li>
+                  <li><%= link_to "Members", "#" %></li>
+                  <li><%= link_to "Contact", "#" %></li>
+                </ul>               
+            </div>
+          </div>
+        </div>        
+      </div>
+    </nav>  
   <%= yield %>  
 
-
+  <div class="well objective-well end-well text-center">
+          <ul class="footer-list">
+            <li><a href=""><i class="fa fa-envelope"></i></a></li>
+            <li><a href=""><i class="fa fa-phone"></i></a></li>
+            <li><a href=""><i class="fa fa-facebook"></i></a></li>
+            <li><a href=""><i class="fa fa-twitter"></i></a></li>
+          </ul>
+  </div>
 </body>
 </html>
