--- a/app/views/landingpage/home.html.erb
+++ b/app/views/landingpage/home.html.erb
@@ -71,7 +71,7 @@
   </div>
   
   <br/>
-  <%= link_to "Sign up for Club Contents", "#", class:"btn btn-primary" %>
+  <%= link_to "Sign up for Club Contents", new_user_registration_path, class:"btn btn-primary" %>
 </div>
 
 <div class="container footer-container">
