--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,56 +1,65 @@
 
       <div class="well pirate-well">
-        <div class="row">
-          <div class="col-md-3 col-md-offset-1">
-            <h2>Sign up</h2>
-                <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-                  <%= devise_error_messages! %>
-                
-                  <div class="field form-group">
-                    <%= f.label :email %><br />
-                    <%= f.email_field :email, autofocus: true, class: "form-control" %>
-                  </div>
-                
-                  <div class="field form-group">
-                    <%= f.label :password %>
-                    <% if @validatable %>
-                    <em>(<%= @minimum_password_length %> characters minimum)</em>
-                    <% end %><br />
-                    <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
-                  </div>
-                
-                  <div class="field form-group">
-                    <%= f.label :password_confirmation %><br />
-                    <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
-                  </div>
-                
-                  <div class="actions">
-                    <%= f.submit "Sign up", class:"btn btn-success" %>
-                  </div>
-                <% end %>          
-                  <br>
-                Already have an account? <%= render "devise/shared/links" %>  
-                  <br>
-          </div>
-          
-          <div class="col-md-3 col-md-offset-5">
-            <div class="well benefit-well">
-              <ul class="benefit-members">
-                <h2>Membership Benefits</h2>
-                <br>
-                <li>- Access to the Events Page</li>
-                <li>- Have your name on the membership list</li>
-                <li>- Get exclusive tutorials from the captain</li>
-                <li>- Be engaged with The Pirate Club discussions</li>
-                <li>- Have your name on the membership list</li>
-                <li>- Cool titles for your account!</li>
-                
-                <br>
-                <%= link_to "Coming soon Paid Memberships!", "#", class: "btn btn-warning" %>
-                <br>
-              </ul>              
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3 col-md-offset-4">
+              <br>
+                <h2>Sign up</h2>
+                    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                      <%= devise_error_messages! %>
+                    
+                      <div class="field form-group">
+                        <%= f.label :email %><br />
+                        <%= f.email_field :email, autofocus: true, class: "form-control" %>
+                      </div>
+                    
+                      <div class="field form-group">
+                        <%= f.label :password %>
+                        <% if @validatable %>
+                        <em>(<%= @minimum_password_length %> characters minimum)</em>
+                        <% end %><br />
+                        <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+                      </div>
+                    
+                      <div class="field form-group">
+                        <%= f.label :password_confirmation %><br />
+                        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+                      </div>
+                    
+                      <div class="actions">
+                        <%= f.submit "Sign up", class:"btn btn-success" %>
+                      </div>
+                    <% end %>          
+                      <br>
+                    Already have an account? <%= render "devise/shared/links" %>  
+                      <br>
+                      <br>
             </div>
-          </div>
-          
+          </div>          
         </div>
+      </div>
+      
+      <div class="jumbotron img-coding">
+        <div class="container">
+              <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                  <div class="well benefit-well">
+                    <ul class="benefit-members text-center">
+                      <h2>Membership Benefits</h2>
+                      <br>
+                      <li>- Access to the Events Page</li>
+                      <li>- Have your name on the membership list</li>
+                      <li>- Get exclusive tutorials from the captain</li>
+                      <li>- Be engaged with The Pirate Club discussions</li>
+                      <li>- Have your name on the membership list</li>
+                      <li>- Cool titles for your account!</li>
+                      
+                      <br>
+                      <%= link_to "Coming soon Paid Memberships!", "#", class: "btn btn-warning" %>
+                      <br>
+                    </ul>              
+                  </div>                  
+                </div>
+              </div>        
+        </div>        
       </div>
