--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -27,6 +27,11 @@ body.pirate {
   padding-top:0;
 }
 
+.navbar-btn {
+  border-radius: 0;
+  margin: 0 15px;
+}
+
 //landing page
 .btn.btn-hacked {
   border-radius:0;
@@ -117,11 +122,7 @@ ul.footer-list {
   border: none;
   margin-bottom: 0;
   
-  position:fixed;
-  left:0;
-  bottom:0;
   height:48px;
-  width:100%;
 }
 
 
