--- a/app/views/landingpage/home.html.erb
+++ b/app/views/landingpage/home.html.erb
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col-md-2 col-md-offset-1 text-center">
 
-          <img src="https://s3.amazonaws.com/uifaces/faces/twitter/csswizardry/128.jpg" class="img-circle img-objective"/>
+          <img src="https://s3.amazonaws.com/uifaces/faces/twitter/bermonpainter/128.jpg" class="img-circle img-objective"/>
         </div>
           <div class="col-md-8">
             <h2>Words from the Captain <small></small></h2>
@@ -31,7 +31,7 @@
       <div class="row">
         <div class="col-md-2 col-md-offset-1 text-center">
 
-          <img src="https://s3.amazonaws.com/uifaces/faces/twitter/flamekaizar/128.jpg" class="img-circle img-objective"/>
+          <img src="https://s3.amazonaws.com/uifaces/faces/twitter/bermonpainter/128.jpg" class="img-circle img-objective"/>
         </div>
           <div class="col-md-8">
             <h2>Goals for this Year</h2> <small></small></h2>
@@ -88,3 +88,12 @@
     
   </div>
 </div>
+
+    <div class="well objective-well end-well text-center">
+          <ul class="footer-list">
+            <li><a href=""><i class="fa fa-envelope"></i></a></li>
+            <li><a href=""><i class="fa fa-phone"></i></a></li>
+            <li><a href=""><i class="fa fa-facebook"></i></a></li>
+            <li><a href=""><i class="fa fa-twitter"></i></a></li>
+          </ul>
+  </div>
