--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,11 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-              <%= link_to 'The Pirate Club', root_path, class: 'navbar-brand' %>
+                <% if current_user %>
+                  <%= link_to current_user.username, root_path, class: 'navbar-brand' %>
+                  <% else %>
+                  <%= link_to 'The Pirate Club', root_path, class: 'navbar-brand' %>
+                <% end %>
             </div>
           </div>
           <div class="col-md-5">
@@ -29,7 +33,7 @@
                   <li><%= link_to "Events", "#" %></li>
                   <li><%= link_to "Members", "#" %></li>
                     <% if current_user %>
-                      <li><%= button_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+                      <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
                     <% else %>
                       <li><%= link_to "Log In", new_user_session_path, method: :get %></li>
                       <li><%= link_to "Sign Up", new_user_registration_path, method: :get %></li>
