--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,8 @@
                     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
                       <%= devise_error_messages! %>
                       
+                      <% :rank_id = 3 %>
+                      
                       <div class="field form-group">
                         <%= f.label :username %><br />
                         <%= f.text_field :username, autofocus: true, class: "form-control" %>
