--- a/app/views/landingpage/home.html.erb
+++ b/app/views/landingpage/home.html.erb
@@ -1,6 +1,5 @@
 
 <div class="jumbotron hacked text-center" id="navtron">
-    
     <div class="glitch" data-text="THE&nbsp;PIRATE&nbsp;CLUB">THE PIRATE CLUB</div>
     <h3>//Welcome to the official site for the RSHS Pirate Club.</h3>
     <p>Club Meetings: Thursday @ Room 135</p>
@@ -8,6 +7,8 @@
     <%= link_to "Club Executives", "#", class: "btn btn-danger btn-jumbohack" %>
     <%= link_to "Upcoming Events", "#", class: "btn btn-danger btn-jumbohack" %>
     <br/>
+    <br>
+    <%= link_to "Create your profile!", new_user_profile_path(current_user), class: "btn btn-primary btn-hacked" if current_user %>
 </div>
 
 <div class="jumbotron hacked-2">
@@ -22,7 +23,7 @@
           <div class="col-md-8">
             <h2>Words from the Captain <small></small></h2>
             <p>Arrrrrrrrrrrrhg! Welcome! Just know that you might be thinking of a different kind of pirate than us... No, we do not rule the 7 seas. Rather, we love the internet and what it has to offer. However, we are not condoning piracy...</p>
-            <%= link_to "Sign up for news and upcoming events!", "#", class:"btn btn-primary btn-hacked" %>
+            <%= link_to "Sign up for news and upcoming events!", new_user_registration_path, class:"btn btn-primary btn-hacked" if !current_user %>
           </div>
       </div>
     </div>
@@ -71,7 +72,7 @@
   </div>
   
   <br/>
-  <%= link_to "Sign up for Club Contents", new_user_registration_path, class:"btn btn-primary" %>
+  <%= link_to "Sign up for Club Contents", new_user_registration_path, class:"btn btn-primary btn-hacked" if !current_user %>
 </div>
 
 <div class="container footer-container">
