--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -2,10 +2,11 @@
     <div class="row">
       <div class="col-md-12">
         <div class="well objective-well">
-            <h1 class="text-center">Create Your Profile</h1>
-            <p class="text-center">Let other people know about you!</p>
+            <h1 class="text-center">Update Your Profile</h1>
+            <p class="text-center">Need to change a few lines for your profile? Do it here!</p>
             
             <%= render 'form' %>
+            
         </div>
       </div>
     </div>    
