--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,10 @@
-<%= @user %>
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <div class="well objective-well footer-well text-center">
+                <h2><%= @user.profile.first_name %> <%= @user.profile.last_name %></h2>
+                <p><%= @user.profile.description %></p>
+            </div>
+        </div>
+    </div>
+</div>
