--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -12,6 +12,16 @@
                     </div>                
                 </div>
             </div>
+            
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                      <div class="form-group">
+                        <%= f.label :grade %>
+                        <%= f.select :grade, ['Grade 10', 'Grade 11', 'Grade 12'], {}, class: 'form-control' %>
+                      </div>                    
+                </div>
+            </div>
+            
             <div class="form-group">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
