--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -164,3 +164,10 @@ ul.benefit-members {
   
   border-top: 2px solid $terminal-green;
 }
+
+//Profiles
+
+.img-avatar {
+  width: 128px;
+  height: 128px;
+}
