--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,4 +1,4 @@
-          <%= form_for @profile, url: user_profile_path do |f| %>
+          <%= form_for @profile, url: user_profile_path, :html => { :multipart => true } do |f| %>
             <div class="form-group">
                 <div class="row">
                     <br>
@@ -14,11 +14,18 @@
             </div>
             
             <div class="row">
-                <div class="col-md-8 col-md-offset-2">
+                <div class="col-md-4 col-md-offset-2">
                       <div class="form-group">
                         <%= f.label :grade %>
                         <%= f.select :grade, ['Grade 10', 'Grade 11', 'Grade 12'], {}, class: 'form-control' %>
                       </div>                    
+                </div>
+                
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <%= f.label :avatar %>
+                        <%= f.file_field :avatar %> Recommended size: 128x128 px
+                    </div>
                 </div>
             </div>
             
