--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,13 @@
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <div class="well objective-well footer-well text-center">
+                <br>
+                <%= image_tag @user.profile.avatar.url, class:'img img-circle img-avatar' %>
+                <br>
+                <br>
+                <%= rankLabel %>
                 <h2><%= @user.profile.first_name %> <%= @user.profile.last_name %> <small><%= @user.profile.grade %></small></h2>
                 <p><%= @user.profile.description %></p>
-                <%= rankLabel %>
             </div>
         </div>
     </div>
