--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -24,7 +24,7 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <%= f.label :avatar %>
-                        <%= f.file_field :avatar %> Recommended size: 128x128 px
+                        Disabled for Now | Recommended size: 128x128 px
                     </div>
                 </div>
             </div>
