improvements and finished posts implementation

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -12,4 +12,8 @@ $event-red: #F06161;
         text-decoration: none;
         color: $event-red;
     }
+    
+    .btn {
+        color: black;
+    }
 }
