--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="form-group">
     <div class="container-fluid">
         <div class="well objective-well footer-well">
-            <h2 class="text-center">New Post</h2>
+            <h2 class="text-center">Edit Post</h2>
             <br>
             <%= render 'form' %>
         </div>
