--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
           <div class="col-md-5">
             <div class="collapse navbar-collapse" id="main-nav-collapse">
                 <ul class="nav navbar-nav navbar-right text-center">
-                  <!--<li><%= link_to "Events", "#" %></li> -->
+                  <li><%= link_to "Events", posts_path %></li>
                   <li><%= link_to "Members", users_path %></li>
                     <% if current_user %>
                       <% if current_user.profile %>
