--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,12 +15,12 @@
                 <div class="col-md-4">
                     <div class="well objective-well post-well">
                             <h2>
-                                <%= link_to post.title, post %>
+                                <%= link_to post.title, post, :target => "_blank" %>
                             </h2>
                             <p><%= post.created_at.strftime("%B, %d, %Y") %></p>
                             <% if current_user.rank_id == 1 || current_user.rank_id == 2 %>
-                                <%= link_to "Edit Post", edit_posts_path(post), method: :get %>
-                                <%= link_to "Delete Post", destroy_posts_path(post), method: :delete %>
+                                <%= link_to "Edit Post", edit_post_path(post), class:'btn btn-warning btn-hacked' %>
+                                <%= link_to "Delete Post", post_path(post), method: :delete, class:'btn btn-danger btn-hacked' %>
                             <% end %>
                     </div>
                 </div>              
@@ -36,9 +36,13 @@
                 <div class="col-md-4">
                     <div class="well objective-well post-well">
                             <h2>
-                                <%= link_to post.title, post %>
+                                <%= link_to post.title, post, :target => "_blank" %>
                             </h2>
                             <p><%= post.created_at.strftime("%B, %d, %Y") %></p>
+                            <% if current_user.rank_id == 1 || current_user.rank_id == 2 %>
+                                <%= link_to "Edit Post", edit_post_path(post), class:'btn btn-warning btn-hacked' %>
+                                <%= link_to "Delete Post", post_path(post), method: :delete, class:'btn btn-danger btn-hacked' %>
+                            <% end %>
                     </div>
                 </div>              
             <% end %>        
@@ -53,9 +57,13 @@
                 <div class="col-md-4">
                     <div class="well objective-well post-well">
                             <h2>
-                                <%= link_to post.title, post %>
+                                <%= link_to post.title, post, :target => "_blank" %>
                             </h2>
                             <p><%= post.created_at.strftime("%B, %d, %Y") %></p>
+                            <% if current_user.rank_id == 1 || current_user.rank_id == 2 %>
+                                <%= link_to "Edit Post", edit_post_path(post), class:'btn btn-warning btn-hacked' %>
+                                <%= link_to "Delete Post", post_path(post), method: :delete, class:'btn btn-danger btn-hacked' %>
+                            <% end %>
                     </div>
                 </div>              
             <% end %>        
@@ -63,3 +71,5 @@
     </div>
     
 </div>
+
+<div class="well objective-well end-well"></div>
