new text for goals

--- a/app/views/landingpage/home.html.erb
+++ b/app/views/landingpage/home.html.erb
@@ -42,7 +42,7 @@
         </div>
           <div class="col-md-8">
             <h2>Goals for this Year</h2> <small></small></h2>
-            <p>We plan to lease a server for one... And we're always listening for new ideas! (Related to tech)</p>
+            <p>We'd like to see Shep have a 3D printer. To achieve this, we need to fundraise and all ideas are welcome. If there's any extra money left over, we might lease a server. This would allow us to do many things like : Have a VPN for all club members, Make a private torrent tracker or whatever else YOU can come up with. (As long as it's legal and abides by school rules lol)</p>
             <% if !current_user %>
             <%= link_to "Sign up to view more", new_user_registration_path, class:"btn btn-primary btn-hacked" %>
             <% end %>
